# sdlMS

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
doc/: Linux.md  (+4 more)
sdlms/: CMakeLists.txt  main.cpp
sdlms/Common/: Point.cpp  Point.h
sdlms/Commons/: Commons.cppm  Commons.h  PlayerState.cpp  PlayerState.cppm  PlayerState.h  Point.cpp  Point.cppm  Point.h  Random.cpp  Random.h  Triangle.cpp  Triangle.cppm  Triangle.h  Zindex.cppm  Zindex.h
sdlms/Components/: AfterImage.cpp  AfterImage.cppm  AfterImage.h  AiCharacter.cppm  Animated.cpp  Animated.cppm  Animated.h  AnimatedSprite.cpp  AnimatedSprite.cppm  AnimatedSprite.h  AnimatedSprite.hpp  AreaEffect.cpp  AreaEffect.h  Attack.cpp  Attack.cppm  Attack.h  Avatar.cpp  Avatar.h  BackGround.cpp  BackGround.cppm  BackGround.h  BackSprite.cpp  BackSprite.cppm  BackSprite.h  Ball.cpp  Ball.cppm  Ball.h  Border.cpp  Border.cppm  Border.h  Buff.cpp  Buff.h  C_Cursor.cpp  C_Cursor.h  Camera.cpp  Camera.h  Character.cpp  Character.cppm  Character.h  ChatBalloon.cpp  (+99 more)
sdlms/Components/Physic/: Normal.cpp  Normal.h
sdlms/Core/: Android.cpp  Android.h  Camera.cpp  Camera.cppm  Camera.h  Core.cppm  Core.h  ECSSystem.h  File.cpp  File.h  FreeType.cpp  FreeType.h  Input.cpp  Input.cppm  Input.h  Item.cpp  Item.h  Keyboard.cpp  Keyboard.h  Line.cpp  Line.h  Map.cpp  Map.cppm  Map.h  MathHelper.h  Player.cpp  Player.cppm  Player.h  Point.h  RawTexture.cpp  RawTexture.h  Scene.cpp  Scene.h  Texture.cpp  Texture.h  Window.cpp  Window.cppm  Window.h  World.cpp  World.cppm  (+1 more)
sdlms/Core/EntityBuilder/: EB_Cursor.h
sdlms/Entities/: AiCharacter.cpp  AiCharacter.cppm  BackGround.cpp  BackGround.cppm  BackGround.h  Ball.cpp  Ball.cppm  Ball.h  Border.cpp  Border.cppm  Border.h  Character.cpp  Character.cppm  Character.h  ChatBalloon.cpp  ChatBalloon.h  Drop.cpp  Drop.cppm  Drop.h  Entities.cppm  Entities.h  Entity.cpp  Entity.h  FootHold.cpp  FootHold.cppm  FootHold.h  LadderRope.cpp  LadderRope.cppm  LadderRope.h  Mob.cpp  Mob.cppm  Mob.h  NameTag.cpp  NameTag.h  Npc.cpp  Npc.cppm  Npc.h  Obj.cpp  Obj.cppm  Obj.h  (+16 more)
sdlms/PlayerSkill/: Common.cpp  Common.h  PlayerSkill.cpp  PlayerSkill.cppm  PlayerSkill.h  Skill_1001004.cpp  Skill_1001005.cpp  Skill_1101004.cpp  Skill_1101007.cpp  Skill_1111002.cpp  Skill_1111008.cpp  Skill_1121006.cpp  Skill_1121008.cpp  Skill_1311006.cpp  Skill_14101006.cpp  Skill_2001002.cpp  Skill_2101004.cpp  Skill_2101005.cpp  Skill_21100005.cpp  Skill_2121005.cpp  Skill_2201002.cpp  Skill_2201004.cpp  Skill_2211002.cpp  Skill_2221005.cpp  Skill_2221006.cpp  Skill_2301002.cpp  Skill_3001005.cpp  Skill_3101005.cpp  Skill_3111003.cpp  Skill_3111006.cpp  Skill_3121006.cpp  Skill_3221005.cpp  Skill_4001003.cpp  Skill_4001344.cpp  Skill_4101004.cpp  Skill_4111002.cpp  Skill_4121007.cpp  Skill_4201004.cpp  Skill_4201005.cpp  Skill_4211002.cpp  (+1 more)
sdlms/PlayerSummon/: PlayerSummon.h  Summon_4111002.cpp
sdlms/Resource/: Resource.h  Wz.cpp  Wz.h
sdlms/Resources/: Resources.cppm  Wz.cpp  Wz.cppm  Wz.h
sdlms/Systems/: AiCharacterStateMachine.cpp  AiCharacterStateMachine.cppm  Animate.cpp  Animate.cppm  Animate.h  Attack.cpp  Attack.cppm  Attack.h  Ball.cpp  Ball.cppm  Ball.h  Buff.cpp  Buff.h  Camera.cpp  Camera.cppm  Camera.h  CameraSystem.cpp  CameraSystem.h  Collision.cpp  Collision.cppm  Collision.h  CoolDown.cpp  CoolDown.cppm  CoolDown.h  DeltaTimeSystem.cpp  DeltaTimeSystem.h  Drop.cpp  Drop.cppm  Drop.h  EntitySystem.cpp  EntitySystem.h  Hit.cpp  Hit.cppm  Hit.h  InputSystem.cpp  InputSystem.h  MobStateMachine.cpp  MobStateMachine.cppm  MobStateMachine.h  Move.cpp  (+49 more)
sdlms/UI/: Button.cpp  Button.h  Cursor.cpp  Cursor.cppm  Cursor.h  GainTip.cpp  GainTip.h  KeyConfig.cpp  KeyConfig.h  MiniMap.cpp  MiniMap.h  QuickSlot.cpp  QuickSlot.h  StatusBar.cpp  StatusBar.h  ToolTip.cpp  ToolTip.h  Tooltip.cpp  UI.cppm  UI.h  UIBuff.cpp  UIBuff.h  UIEquip.cpp  UIEquip.h  UIItem.cpp  UIItem.h  UINotice.cpp  UINotice.h  UISkill.cpp  UISkill.h  UIStat.cpp  UIStat.h  WorldMap.cpp  WorldMap.h
src/: CMakeLists.txt  main.cpp
src/client/: main.cpp
src/client/game/: game_backgrnd.h  game_ball.h  game_buff.h  game_chair.h  game_character.h  game_chatballoon.h  game_drop.h  game_effect.h  game_equip.h  game_face.h  game_foothold.h  game_gain_log.h  game_gauge.h  game_input.h  game_install.h  game_item.h  game_ladderrope.h  game_mob.h  game_nametag.h  game_npc.h  game_obj.h  game_pet.h  game_portal.h  game_reactor.h  game_scroll.h  game_seat.h  game_sound.h  game_tile.h  game_tomb.h  game_tooltip.h
src/client/game_instance/: afterimage_game_instance.cpp  afterimage_game_instance.h  backgrnd_game_instance.cpp  backgrnd_game_instance.h  ball_game_instance.cpp  ball_game_instance.h  camera_game_instance.cpp  camera_game_instance.h  character_game_instance.cpp  character_game_instance.h  (+47 more)
src/sdlms/: animatedsprite.cpp  animatedsprite.hpp  backgrd.cpp  backgrd.hpp  button.cpp  button.hpp  camera.cpp  camera.hpp  character.cpp  character.hpp  cursor.cpp  cursor.hpp  dynamicsprite.cpp  dynamicsprite.hpp  eventsprite.cpp  eventsprite.hpp  foothold.cpp  foothold.hpp  frame.cpp  frame.hpp  graphics.cpp  graphics.hpp  hud.cpp  hud.hpp  input.cpp  input.hpp  ladderRope.cpp  ladderRope.hpp  main.cpp  main.hpp  map.cpp  map.hpp  minimap.cpp  minimap.hpp  npc.cpp  npc.hpp  obj.cpp  obj.hpp  physics.cpp  physics.hpp  (+18 more)
src/server/: client_instance.h  request_handler.cpp  request_handler.h  server_main.cpp  server_main.h
src/template/: currenton.hpp  point.hpp
src/util/: character_util.cpp  character_util.hpp  currenton.hpp  cursor_util.cpp  cursor_util.hpp  ffmpeg.cpp  ffmpeg.hpp  ffmpeg_util.cpp  ffmpeg_util.hpp  freetype.cpp  freetype.hpp  freetype_util.cpp  freetype_util.hpp  hud_util.cpp  hud_util.hpp  map_util.cpp  map_util.hpp  minimap_util.cpp  minimap_util.hpp  point.hpp  sound_util.cpp  sound_util.hpp  sprite_util.cpp  sprite_util.hpp  statusbar_util.cpp  statusbar_util.hpp  string_util.cpp  string_util.hpp  ui_util.cpp  ui_util.hpp  wz_util.cpp  wz_util.hpp
src/worldmap/: camera.cpp  camera.hpp  worldmap.cpp  worldmap.hpp
(+183 files in other folders)
